--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "cSpell.words": ["Ptrovider", "reduxjs"]
+  "cSpell.words": [
+    "Mebers",
+    "Memberscards",
+    "Ptrovider",
+    "reduxjs"
+  ]
 }
