feat: reorginize nav, add login block

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "plugins": [{ "name": "typescript-plugin-css-modules" }],
     "jsx": "react",
+    "moduleResolution": "nodenext",
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
