--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rslang",
   "version": "0.1.0",
-  "homepage": "https://azazellospb.github.io/rslang",
+  "homepage": "https://azazellospb.github.io",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.4",
@@ -28,7 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build"
   },
   "browserslist": {
     "production": [
